# st7789_rpi_pico

./: README.md
st7789_rpi_pico/: CMakeLists.txt  README.md  lcd.c  main.c  spi.c
st7789_rpi_pico/include/: header.h  io.h  lcd.h  mytype.h  spi.h
